заменил gulp.js и вставил myfont.css

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,9 @@
 
         <!--GOOGLE FONTS-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <!--ICONS-->
+    <link rel="stylesheet" href="css/myfont.css">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
 <!--HEADER START-->
@@ -41,7 +42,7 @@
     <div class="aside-menu">
         <ul>
             <li class="active"><a href="">General</a></li>
-            <li><a href="">Details</a></li>
+            <li><a href=""><span class="icon icon-details"></span> Details</a></li>
             <li><a href="">Links</a></li>
             <li><a href="">Banners</a></li>
             <li><a href="">Personal data</a></li>
