--- a/app/personal-data.html
+++ b/app/personal-data.html
@@ -7,14 +7,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Template</title>
 
-        <!--GOOGLE FONTS-->
+    <!--GOOGLE FONTS-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <!--ICONS-->
     <link rel="stylesheet" href="css/myfont.css">
-
-    <!--jQuery css-->
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -45,11 +41,11 @@
     </div>
     <div class="aside-menu">
         <ul>
-            <li class="active"><a href="">General</a></li>
+            <li><a href="">General</a></li>
             <li><a href=""><span class="icon icon-details"></span> Details</a></li>
             <li><a href="">Links</a></li>
             <li><a href="">Banners</a></li>
-            <li><a href="">Personal data</a></li>
+            <li class="active"><a href="">Personal data</a></li>
             <li><a href="">Payout</a></li>
             <li><a href="">Postback</a></li>
         </ul>
@@ -69,39 +65,35 @@
 
 <main>
     <div class="content-wrapper">
-        <div class="panel">
-            <div class="panel-header">
-                <h3 class="page-title">General statistics</h3>
-            </div>
-            <div class="panel-data">
-                <form class="datepicker-form">
-                    <input type="text" id="from" name="from" class="form-control">
-                    <input type="text" id="to" name="to" class="form-control">
-                </form>
-            </div>
-        </div>
         <div class="panel links">
             <div class="panel-header">
-                <h3 class="page-title">Links</h3>
+                <h3 class="page-title">Personal date</h3>
             </div>
             <div class="panel-body">
-                <div class="btn-row text-center">
-                    <a href="" class="btn btn-action">add new</a>
+                <div class="panel-form row">
+                    <form>
+                        <div class="label-group">
+                            <label for="user-name">Name</label>
+                            <input type="text" class="form-control" id="user-name">
+                        </div>
+                        <div class="label-group">
+                            <label for="user-surname">Surname</label>
+                            <input type="text" class="form-control" id="user-surname">
+                        </div>
+                        <div class="label-group">
+                            <label for="user-email">E-mail</label>
+                            <input type="text" class="form-control" id="user-email">
+                        </div>
+                        <div class="label-group">
+                            <label for="user-phone">Phone number</label>
+                            <input type="text" class="form-control" id="user-phone">
+                        </div>
+                    </form>
                 </div>
-                <div class="container-sm">
-                    <table class="table full-width">
-                        <tr>
-                            <td class="text-bold td-title">Line header</td>
-                            <td><a href="" class="link large-link">link</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-bold td-title">Line header</td>
-                            <td><a href="" class="link large-link">link</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="btn-row text-center">
-                    <a href="" class="btn btn-action">add new</a>
+                <div class="panel-footer">
+                    <div class="btn-row text-center">
+                        <a href="" class="btn btn-action">Save</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -110,10 +102,6 @@
 
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-<!--Init plugins-->
-<script src="js/init.js"></script>
 
 </body>
 </html>
