--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,21 @@
             <div class="panel-header">
                 <h3 class="page-title">General statistics</h3>
             </div>
-            <div class="panel-data">
+            <div class="panel-date text-center">
                 <form class="datepicker-form">
-                    <input type="text" id="from" name="from" class="form-control">
-                    <input type="text" id="to" name="to" class="form-control">
+                    <div class="date-input-wrap">
+                        <input type="text" id="from" name="from" class="date-control">
+                        <input type="text" id="to" name="to" class="date-control">
+                    </div>
+                    <button class="btn btn-action"><span class="icon icon-refresh"></span></button>
                 </form>
+            </div>
+            <div class="panel-body">
+                <div class="container container-sm">
+                    <div class="chart-wrap">
+                        <canvas id="myChart" width="400" height="400"></canvas>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="panel links">
@@ -108,9 +118,18 @@
     </div>
 </main>
 
+
+<!--MODAL ADD LINKS-->
+<div class="modal">
+    <h1>Modal</h1>
+</div>
+
+
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+<script src="js/jquery.bpopup.min.js"></script>
 
 <!--Init plugins-->
 <script src="js/init.js"></script>
