--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="panel-body">
                 <div class="btn-row text-center">
-                    <a href="" class="btn btn-action">add new</a>
+                    <a href="" class="btn btn-action" data-modal="#add-links-modal">add new</a>
                 </div>
                 <div class="container-sm">
                     <table class="table full-width">
@@ -111,7 +111,7 @@
                     </table>
                 </div>
                 <div class="btn-row text-center">
-                    <a href="" class="btn btn-action">add new</a>
+                    <a href="" class="btn btn-action" data-modal="#add-links-modal">add new</a>
                 </div>
             </div>
         </div>
@@ -120,8 +120,27 @@
 
 
 <!--MODAL ADD LINKS-->
-<div class="modal">
-    <h1>Modal</h1>
+<div class="modal" id="add-links-modal">
+    <div class="modal-header flex-container align-items-center justify-content-sb">
+        <h1 class="page-title">add url</h1>
+        <div class="close"><span class="icon icon-close"></span></div>
+    </div>
+    <div class="modal-body flex-container">
+        <div class="checkbox-wrap">
+            <h3 class="section-title">Select websites</h3>
+            <div class="checkboxes flex-container scrollbar-rail">
+                <div class="checkbox-group">
+                    <input type="checkbox" name="link1" id="link1">
+                    <label for="link1">Landing page Money</label>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <form>
+
+        </form>
+    </div>
 </div>
 
 
@@ -130,6 +149,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="js/jquery.bpopup.min.js"></script>
+<script src="js/jquery.scrollbar.js"></script>
 
 <!--Init plugins-->
 <script src="js/init.js"></script>
