делаем адаптивное меню и range-слайдер

--- a/app/guide.html
+++ b/app/guide.html
@@ -9,6 +9,9 @@
 
     <!--GOOGLE FONTS-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <!--jQuery css-->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!--Styles-->
     <link rel="stylesheet" href="css/myfont.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -75,10 +78,23 @@
             <span class="icon icon-calendar"></span>
         </div>
     </div>
-    
-    
-<!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--Icons-->
+    <div class="guide-wrap range-slider-wrap">
+        <div id="slider">
+            <div id="custom-handle" class="ui-slider-handle"></div>
+        </div>
+    </div>
+
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+    <script src="js/jquery.bpopup.min.js"></script>
+    <script src="js/jquery.scrollbar.js"></script>
+
+    <!--Init plugins-->
+    <script src="js/init.js"></script>
 
 </body>
 </html>
