--- a/app/personal-data.html
+++ b/app/personal-data.html
@@ -41,13 +41,48 @@
     </div>
     <div class="aside-menu">
         <ul>
-            <li><a href="">General</a></li>
-            <li><a href=""><span class="icon icon-details"></span> Details</a></li>
-            <li><a href="">Links</a></li>
-            <li><a href="">Banners</a></li>
-            <li class="active"><a href="">Personal data</a></li>
-            <li><a href="">Payout</a></li>
-            <li><a href="">Postback</a></li>
+            <li class="active">
+                <a href="index.html">
+                    <span class="text-center icon icon-general"></span>
+                    <span class="menu-link">General</span>
+                </a>
+            </li>
+            <li>
+                <a href="details.html">
+                    <span class="text-center icon icon-details"></span>
+                    <span class="menu-link">Details</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="text-center icon icon-links"></span>
+                    <span class="menu-link">Links</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="text-center icon icon-banners"></span>
+                    <span class="menu-link">Banners</span>
+                </a>
+            </li>
+            <li>
+                <a href="personal-data.html">
+                    <span class="text-center icon icon-personaldata"></span>
+                    <span class="menu-link">Personal data</span>
+                </a>
+            </li>
+            <li>
+                <a href="payout.html">
+                    <span class="text-center icon icon-payout"></span>
+                    <span class="menu-link">Payout</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="text-center icon icon-postback"></span>
+                    <span class="menu-link">Postback</span>
+                </a>
+            </li>
         </ul>
         <div class="your-manager">
             <h3 class="page-title small-title">Your-manager</h3>
