начал делать дз1

--- a/app/guide.html
+++ b/app/guide.html
@@ -17,10 +17,11 @@
 
 </head>
 <body>
-    <!--Title-->
+    <!--Texts-->
     <div class="guide-wrap">
-        <h2 class="page-title">page-title</h2>
-        <h3 class="section-title">section-title</h3>
+        <h2 class="page-title">page header</h2>
+        <h3 class="section-title">Section header</h3>
+        <p class="text">Text</p>
     </div>
     <!--Links-->
     <div class="guide-wrap">
@@ -33,7 +34,7 @@
         <a href="" class="btn btn-action">Button</a>
         <a href="" class="btn btn-disabled">Button disabled</a>
     </div>
-    <!--Tables-->
+    <!--Tab les-->
     <div class="guide-wrap">
         <table class="table">
             <thead>
